--- a/home/static/css/test.html
+++ b/home/static/css/test.html
@@ -1,11 +1,10 @@
-{% load staticfiles %}
 
 <html>
     <head>
         <title>Homepage</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="./test.css">
     </head>
 
     
@@ -36,8 +35,13 @@
                 </ul>
             </nav>
         </header>
-        {% block content %}
-        {% endblock %}
+        <div id="bar">
+        </div>
+        <h1 class="text-center">Polls</h1>
+        <p class="description text-center">
+            This is the homepage for creating or viewing polls. Navigate the newest polls on the left, or create a poll using the create button on the right.
+        </p>
+
     </body>
 </html>
 
